<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.geoserver.extension</groupId>
	<artifactId>gs-ogcfeat-datastore</artifactId>
	<version>2.23.2</version>
	<name>OGCFeat Datastore Module</name>
	<description>A Geoserver datastore for reading GeoJSON based formats from a
		OGCFeat service</description>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gs.version>2.24.2</gs.version>
		<gt.version>30.2</gt.version>
		<junit.version>4.13.1</junit.version>
		<easymock.version>5.2.0</easymock.version>
	</properties>
	<dependencyManagement>

	</dependencyManagement>
	   <!-- For GeoTools -->
	<repositories>
           <repository>
             <id>osgeo</id>
             <name>OSGeo repository</name>
             <url>https://repo.osgeo.org/repository/release/</url>
           </repository>
       </repositories>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-main</artifactId>
			<version>${gt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-http</artifactId>
			<version>${gt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-http-commons</artifactId>
			<version>${gt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-geojson-core</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-models</artifactId>
			<version>2.2.16</version>
		</dependency>


		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-sample-data</artifactId>
			<version>${gt.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.geoserver</groupId>
			<artifactId>gs-platform</artifactId>
			<version>${gs.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geoserver</groupId>
			<artifactId>gs-main</artifactId>
			<version>${gs.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-property</artifactId>
			<version>${gt.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<scope>test</scope>
			<version>${easymock.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
